@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 15 17:47:31 2001 -->
+<!-- Tue Oct 16 14:39:07 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -136,8 +136,10 @@ SPAM (perhaps 1-3 per month).
 <h3>TMDA User Testimonials</h3>
 
 <blockquote>
-"It's great. I've received almost no spam since implementing it."<br>
-Dave Sill on the <em>qmail mailing list</em>
+
+"I use TMDA, and my spam rate has gone from 20-30/day to zero, and
+*no* legitimate mail has been blocked."<br>
+Dave Sill on <em>alt.comp.mail.qmail</em>
 <br><br>
 
 "Blocks spam better than any RBL ever did."<br>
