@@ -1,5 +1,8 @@
 2001-10-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* results.ht (Links): Add an even better testimonial from Dave
+	Sill - Message-ID: <wx0d74734sb.fsf@sws5.ctd.ornl.gov>
+
 	* config.ht (Links): Just link to the two sections.
 
 	* config-server.ht (Links): Mention that you should add your own
